force-app/main/default/objects/Status_Bar_Settings__c/Status_Bar_Settings__c.object-meta.xml
<CustomObject>
    <description>ECM v1
Configuration for a single status bar component</description>
    <label>ECM Status Bar Settings</label>
    <nameField>
        <displayFormat>StatusBarSettings-{0000}</displayFormat>
        <label>Status Bar Settings #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Status Bar Settings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>