force-app/main/default/objects/Status_Bar_Settings__c/fields/ECM_Status_Bar_Configuration__c.field-meta.xml
<CustomField>
    <fullName>ECM_Status_Bar_Configuration__c</fullName>
    <label>ECM Status Bar Configuration</label>
    <referenceTo>ECM_Status_Bar_Configuration__c</referenceTo>
    <relationshipName>Status_Bar_Settings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>