force-app/main/default/objects/Status_Bar_Settings__c/fields/List_Style__c.field-meta.xml
<CustomField>
    <fullName>List_Style__c</fullName>
    <description>If the component will display content in a list, the format that the list should appear in.</description>
    <inlineHelpText>If the component will display content in a list, the format that the list should appear in.</inlineHelpText>
    <label>List Style</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Dropdown Picklist</fullName>
            </value>
            <value>
                <fullName>Buttons</fullName>
            </value>
            <value>
                <fullName>Scrollable Picklist</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>