force-app/main/default/objects/Status_Bar_Settings__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <description>The order in which this component will appear in the dashboard.</description>
    <inlineHelpText>The order in which this component will appear in the dashboard.</inlineHelpText>
    <label>Order</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>