force-app/main/default/objects/Status_Bar_Settings__c/fields/Parent_Record_Type_Developer_Name__c.field-meta.xml
<CustomField>
    <fullName>Parent_Record_Type_Developer_Name__c</fullName>
    <formula>ECM_Status_Bar_Configuration__r.RecordType.DeveloperName</formula>
    <label>Parent Record Type Developer Name</label>
    <type>Text</type>
</CustomField>