force-app/main/default/objects/Status_Bar_Settings__c/fields/Show_sObject_Field_2_Label__c.field-meta.xml
<CustomField>
    <fullName>Show_sObject_Field_2_Label__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Show sObject Field 2 Label</label>
    <type>Checkbox</type>
</CustomField>