force-app/main/default/objects/Status_Bar_Settings__c/fields/sObject_Field_1__c.field-meta.xml
<CustomField>
    <fullName>sObject_Field_1__c</fullName>
    <label>sObject Field 1</label>
    <length>100</length>
    <type>Text</type>
</CustomField>