force-app/main/default/objects/Status_Bar_Settings__c/fields/sObject_Field_3__c.field-meta.xml
<CustomField>
    <fullName>sObject_Field_3__c</fullName>
    <label>sObject Field 3</label>
    <length>100</length>
    <type>Text</type>
</CustomField>