force-app/main/default/objects/Status_Bar_Settings__c/fields/sObject_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>sObject_Record_Type__c</fullName>
    <label>sObject Record Type Label</label>
    <length>80</length>
    <type>Text</type>
</CustomField>