force-app/main/default/objects/Status_Bar_Settings__c/fields/Title_Link__c.field-meta.xml
<CustomField>
    <fullName>Title_Link__c</fullName>
    <label>Title Link</label>
    <type>Url</type>
</CustomField>