force-app/main/default/objects/Status_Bar_Settings__c/recordTypes/ExpStatusBarAssessmentSummary.recordType-meta.xml
<RecordType>
    <fullName>ExpStatusBarAssessmentSummary</fullName>
    <active>true</active>
    <description>Assessment Summary fields (2) to display Baseline, Latest and Previous info for</description>
    <label>Assessment Summary</label>
</RecordType>