force-app/main/default/objects/Status_Bar_Settings__c/recordTypes/ExpStatusBarField.recordType-meta.xml
<RecordType>
    <fullName>ExpStatusBarField</fullName>
    <active>true</active>
    <description>One or more Fields (up to 4) to display</description>
    <label>Field</label>
</RecordType>