force-app/main/default/objects/Status_Bar_Settings__c/recordTypes/ExpStatusBarImage.recordType-meta.xml
<RecordType>
    <fullName>ExpStatusBarImage</fullName>
    <active>true</active>
    <description>Image attachment to display</description>
    <label>Image</label>
</RecordType>