force-app/main/default/objects/Status_Bar_Settings__c/recordTypes/ExpStatusBarMessage.recordType-meta.xml
<RecordType>
    <fullName>ExpStatusBarMessage</fullName>
    <active>true</active>
    <description>Message to display</description>
    <label>Message</label>
</RecordType>