force-app/main/default/objects/Status_Bar_Settings__c/recordTypes/ExpStatusBarReport.recordType-meta.xml
<RecordType>
    <fullName>ExpStatusBarReport</fullName>
    <active>true</active>
    <description>List of Reports available for display</description>
    <label>Report</label>
</RecordType>