force-app/main/default/objects/Status_Bar_Settings__c/validationRules/Exp_Assessment_Summary_Requires_CR.validationRule-meta.xml
<ValidationRule>
    <fullName>Exp_Assessment_Summary_Requires_CR</fullName>
    <active>true</active>
    <description>This component can only be associated with a Status Bar Configuration of type Case Record, Enrolled Client or Enrolled Client Household.</description>
    <errorConditionFormula>IF(LOWER(Component_Classname__c) == &apos;component.c.expstatusbarassessmentsummary&apos; &amp;&amp; 
(ECM_Status_Bar_Configuration__r.RecordType.DeveloperName != &apos;Case_Record&apos;), 
true, false)</errorConditionFormula>
    <errorMessage>The Assessment Summary component can only be associated with a Status Bar Configuration of type Case Record.</errorMessage>
</ValidationRule>