force-app/main/default/objects/Status_Bar_Settings__c/validationRules/Exp_Assessment_Summary_Requires_Fields.validationRule-meta.xml
<ValidationRule>
    <fullName>Exp_Assessment_Summary_Requires_Fields</fullName>
    <active>true</active>
    <errorConditionFormula>IF( LOWER(Component_Classname__c) == &apos;component.c.expstatusbarassessmentsummary&apos; &amp;&amp;  (sObject_Field_1__c  == null || sObject_Field_2__c  == null) , true, false)</errorConditionFormula>
    <errorMessage>The Assessment Summary component requires field names for sObject Field 1 and sObject Field 2. These fields must exist on Assessment__c.</errorMessage>
</ValidationRule>