force-app/main/default/objects/Status_Bar_Settings__c/validationRules/Exp_Client_HH_Restricts_sObject.validationRule-meta.xml
<ValidationRule>
    <fullName>Exp_Client_HH_Restricts_sObject</fullName>
    <active>true</active>
    <errorConditionFormula>IF( ECM_Status_Bar_Configuration__r.RecordType.DeveloperName == &apos;Client_Household&apos; &amp;&amp; LOWER(sObject__c) != &apos;client_household__c&apos; , true, false)</errorConditionFormula>
    <errorMessage>Parent configuration is of type &apos;Client Household&apos;, therefore sObject value must equal &apos;Client_Household__c&apos;.</errorMessage>
</ValidationRule>