force-app/main/default/objects/Status_Bar_Settings__c/validationRules/Exp_Contact_Restricts_sObject.validationRule-meta.xml
<ValidationRule>
    <fullName>Exp_Contact_Restricts_sObject</fullName>
    <active>true</active>
    <errorConditionFormula>IF( ECM_Status_Bar_Configuration__r.RecordType.DeveloperName == &apos;Contact&apos; &amp;&amp; LOWER(sObject__c) != &apos;contact&apos;, true, false)</errorConditionFormula>
    <errorMessage>Parent configuration is of type &apos;Contact&apos;, therefore sObject value must equal &apos;Contact&apos;.</errorMessage>
</ValidationRule>