force-app/main/default/objects/Status_Bar_Settings__c/validationRules/Exp_Enrolled_Client_Restricts_sObject.validationRule-meta.xml
<ValidationRule>
    <fullName>Exp_Enrolled_Client_Restricts_sObject</fullName>
    <active>true</active>
    <errorConditionFormula>IF( ECM_Status_Bar_Configuration__r.RecordType.DeveloperName == &apos;Enrolled_Client&apos; &amp;&amp; LOWER(sObject__c) != &apos;contact&apos; &amp;&amp; LOWER(sObject__c) != &apos;case_record__c&apos;, true, false)</errorConditionFormula>
    <errorMessage>Parent configuration is of type &apos;Enrolled Client&apos;, therefore sObject value must equal &apos;Contact&apos; or &apos;Case_Record__c&apos;.</errorMessage>
</ValidationRule>