force-app/main/default/objects/Status_Bar_Settings__c/validationRules/Exp_Field_Requires_sObject.validationRule-meta.xml
<ValidationRule>
    <fullName>Exp_Field_Requires_sObject</fullName>
    <active>true</active>
    <errorConditionFormula>IF(( LOWER(Component_Classname__c) == &apos;component.c.expstatusbarfield&apos; &amp;&amp; (sObject__c == null || (sObject_Field_1__c == null &amp;&amp; sObject_Field_2__c == null &amp;&amp; sObject_Field_3__c == null &amp;&amp; sObject_Field_4__c == null) || (LOWER(sObject__c) != &apos;contact&apos; &amp;&amp; LOWER(sObject__c) != &apos;client_household__c&apos; &amp;&amp; LOWER(sObject__c) != &apos;case_record__c&apos;))) , true, false)</errorConditionFormula>
    <errorMessage>The Field component requires a value for sObject and a value for at least one of the sObject Fields. sObject value must be one of the following: Contact, Client_Household__c, or Case_Record__c.</errorMessage>
</ValidationRule>