force-app/main/default/objects/Status_Bar_Settings__c/validationRules/Exp_Message_Requires_Fields.validationRule-meta.xml
<ValidationRule>
    <fullName>Exp_Message_Requires_Fields</fullName>
    <active>true</active>
    <errorConditionFormula>IF( LOWER(Component_Classname__c) == &apos;component.c.expstatusbarmessage&apos; &amp;&amp;  (sObject_Field_1__c  == null || sObject_Field_2__c  == null || sObject_Field_3__c  == null || sObject__c == null || ( LOWER(sObject__c) != &apos;contact&apos; &amp;&amp; LOWER(sObject__c) != &apos;client_household__c&apos; &amp;&amp; LOWER(sObject__c) != &apos;case_record__c&apos;)), true, false)</errorConditionFormula>
    <errorMessage>The Message component requires values for sObject, sObject Field 1 (Summary), sObject Field 2  (Severity), and sObject Field 3 (Strength). sObject Field 4 (Detail) is optional. sObject must be equal to Contact, Case_Record__c or Client_Household__c.</errorMessage>
</ValidationRule>