force-app/main/default/objects/Status_Bar_Settings__c/validationRules/Exp_Record_Type_Requires_sObject.validationRule-meta.xml
<ValidationRule>
    <fullName>Exp_Record_Type_Requires_sObject</fullName>
    <active>true</active>
    <errorConditionFormula>IF(sObject_Record_Type__c   != null &amp;&amp; sObject__c == null, true, false)</errorConditionFormula>
    <errorMessage>Value required for sObject when sObject Record Type has a value.</errorMessage>
</ValidationRule>