force-app/main/default/objects/Status_Bar_Settings__c/validationRules/Exp_sObject_Required_When_Field_Has_Val.validationRule-meta.xml
<ValidationRule>
    <fullName>Exp_sObject_Required_When_Field_Has_Val</fullName>
    <active>true</active>
    <errorConditionFormula>IF(( sObject_Field_1__c != null ||  sObject_Field_2__c  != null ||  sObject_Field_3__c  != null ||  sObject_Field_4__c  != null) &amp;&amp; sObject__c == null, true, false)</errorConditionFormula>
    <errorMessage>Value required for sObject when an sObject Field has a value.</errorMessage>
</ValidationRule>